# Diagrams

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md  env.sh
DiagramMaker/: PacletInfo.wl
Tests/: TestBlockDiagram.wlt  TestBlockStackDiagram.wlt  TestFileSystemTreeDiagram.wlt  TestStackHeapDiagram.wlt  TestStringEncodingDiagram.wlt  TestTreeForType.wlt  TestTreeStackDiagram.wlt  TestUtils.wlt
Tests/BlobTestsData/Block-1-Foo/: ExpectedOutput.wl  Input.wl
Tests/BlobTestsData/Block-2-HelloWorld/: ExpectedOutput.wl  Input.wl
Tests/BlobTestsData/Block-3-AnimalDogCat/: ExpectedOutput.wl  Input.wl
Tests/BlobTestsData/Block-4-CustomTheme/: ExpectedOutput.wl  Input.wl
Tests/BlobTestsData/Block-5-Pets/: ExpectedOutput.wl  Input.wl
Tests/BlobTestsData/Block-6-CustomArrow/: ExpectedOutput.wl  Input.wl
crates/: Cargo.toml  rustfmt.toml
crates/diagram-maker/: Cargo.toml
crates/diagram-maker-wll/: Cargo.toml
crates/diagram-maker-wll/src/: lib.rs
crates/diagram-maker/examples/: multiple_attachments.rs  two_boxes.rs
crates/diagram-maker/src/: diagram.rs  from_expr.rs  graphics.rs  layout.rs  lib.rs  render.rs  themes.rs  utils.rs  wll_api.rs
crates/diagram-maker/src/utils/: elf_utils.rs
crates/examples/: two_boxes.rs
crates/src/: diagram.rs  render.rs
crates/unicode-data/: Cargo.toml
docs/: Development.md
examples/: multiple_attachments.rs  two_boxes.rs
paclets/DiagramMaker/: PacletInfo.wl
paclets/Diagrams/: PacletInfo.wl
scripts/: BuildPaclet.wls
src/: diagram.rs  layout.rs  lib.rs  main.rs  render.rs
(+70 files in other folders)
