[package]
name = "diagram-maker-wll"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
diagram-maker = { path = "../diagram-maker" }

wolfram-library-link = "0.2.4"