[package]
name = "diagram-maker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
skia = { package = "skia-safe", version = "0.47.0", features = ["textlayout"] }
cgmath = "0.18.0"

wolfram-expr = "0.1.1"

[dev-dependencies]
open = "2.1.1"