[package]
name = "diagram-maker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]


[dependencies]
skia = { package = "skia-safe", version = "0.47.0", features = ["textlayout"] }
cgmath = "0.18.0"
unicode-segmentation = "1.11.0"

wolfram-expr = "0.1.1"

wolfram-library-link = "0.2.10"

unicode-data = { path = "../unicode-data" }

melior = "0.18.5"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }

iced-x86 = { "version" = "1.21.0", features = ["code_asm"] }

[dev-dependencies]
open = "2.1.1"
